--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-navigation/native": "^5.9.0",
     "@react-navigation/stack": "^5.13.0",
     "expo": "~40.0.0",
+    "expo-constants": "^9.3.5",
     "expo-linking": "~2.0.0",
+    "expo-notifications": "^0.8.2",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
