--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/bottom-tabs": "^5.11.3",
+    "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.9.0",
-    "@react-navigation/stack": "^5.13.0",
+    "@react-navigation/stack": "^5.14.2",
     "expo": "~40.0.0",
     "expo-constants": "^9.3.5",
     "expo-linking": "~2.0.0",
@@ -19,8 +19,11 @@
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native": "0.63.4",
+    "react-native-animatable": "^1.3.3",
+    "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-modal-selector": "^2.0.3",
     "react-native-reanimated": "^1.13.2",
     "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "^3.1.9",
